# py-terminal-messenger

./: README.md
api/: pyproject.toml
api/myapp/: db.sqlite3
api/myapp/home/: models.py  serializers.py  views.py
api/myapp/home/migrations/: 0001_initial.py
api/myapp/myapp/: settings.py  urls.py
