[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nicholas Ramsay <nick@yousponsor.me>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
